Fix content shift when adding shadows.

--- a/src/components/Result.css
+++ b/src/components/Result.css
@@ -24,7 +24,6 @@
 
 @media screen and (min-width: 750px) {
   .Result {
-    max-width: 60vw;
     min-height: 50vh;
     height: 100%;
   }
